# sales_transcription_training

./: main.py  pyproject.toml
