[tool.poetry]
name = "sales-transcription-training"
version = "0.1.0"
description = ""
authors = ["Ahmad Bilal <ahmad.bilal@empglabs.com>"]
readme = "README.md"
packages = [{include = "sales_transcription_training"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
llama-index = "^0.6.21.post1"
google-auth-oauthlib = "^1.0.0"
dynaconf = "^3.1.12"
torch = "^2.0.1"
transformers = "^4.29.2"
sentencepiece = "^0.1.99"
pillow = "^9.5.0"
protobuf = "3.20.0"
pypdf = "^3.9.1"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
